crates/scry-chart/tests/snapshots/render_tests__render_empty_funnel.snap
---
source: crates/scry-chart/tests/render_tests.rs
assertion_line: 1209
expression: summarize(&rendered)
---
canvas: 400x300, 0 commands
overlays: 0
