crates/scry-chart/tests/snapshots/render_tests__render_empty_heatmap.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 0 commands
text_labels: 0
