crates/scry-chart/tests/snapshots/render_tests__render_empty_histogram.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 21 commands
text_labels: 6
  [0] 0.0
  [1] 0.5
  [2] 1.0
  [3] 1.5
  [4] 2.0
  [5] 0
