crates/scry-chart/tests/snapshots/render_tests__render_empty_waterfall.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 6 commands
overlays: 2
  [0] (31, 142) Right "0"
  [1] (212, 278) Center "Total"
